--- a/.github/workflows/build-code.yml
+++ b/.github/workflows/build-code.yml
@@ -22,17 +22,22 @@ jobs:
     - name: "Checkout Repository"
       uses: actions/checkout@v1
 
-     # install QEMU
-    - name: Install QEMU (Linux)
-      run: sudo apt update && sudo apt install make docker
+    # install tools
+    - name: Install tools (Linux)
+      run: sudo apt update && sudo apt install make
       if: runner.os == 'Linux'
-    - name: Install QEMU (macOS)
-      run: brew install make docker
+    - name: Install tools (macOS)
+      run: brew install make binutils
       if: runner.os == 'macOS'
       env:
         HOMEBREW_NO_AUTO_UPDATE: 1
         HOMEBREW_NO_BOTTLE_SOURCE_FALLBACK: 1
         HOMEBREW_NO_INSTALL_CLEANUP: 1
+
+    # install docker
+    - name: Install docker (Linux)
+      run: sudo apt update && sudo apt install docker
+      if: runner.os == 'Linux'
 
     - name: Install Rustup
       run: |
@@ -65,9 +70,15 @@ jobs:
 
     - name: "Build docker image"
       run: make image
+      if: runner.os == 'Linux'
 
     - name: "Run test"
       run: make docker_test
+      if: runner.os == 'Linux'
+
+    - name: "Run test"
+      run: make test
+      if: runner.os == 'macOS'
 
   # check_formatting:
   #   name: "Check Formatting"
