--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -5,9 +5,8 @@ build: src/*.rs src/*.S ../i386-nyarn.json ./linker.ld
 	cp target/$(RUSTC_TERGET)/release/kernel ../build/obj/kernel
 
 test:
-	RUSTFLAGS="-C link-arg=-Tlinker.ld" cargo xbuild --target ../$(RUSTC_TERGET).json --tests --target-dir target_for_test
-	$(eval test_kernel=$(shell ls -t target_for_test/i386-nyarn/debug/ | xargs -0 echo | grep "^kernel-*" | grep -v "\.d" | head -n1))
-	cp target_for_test/i386-nyarn/debug/$(test_kernel) ../build/obj/kernel
+	./test.sh
 
 clean:
 	cargo clean
+	rm -rf target_for_test
